# Lane-detector-Using-OpenCV-for-autonomous-vehicle

./: README.md
lane_detection_img/: CMakeLists.txt  README.md  main.cpp  readme.md  readme.txt
lane_detector_live/: CMakeLists.txt  README.md  main.cpp  readme.txt
